Revision history for Perl extension Catalyst::Model::DBIC::Schema

0.47  Wed Dec  8 22:21:06 UTC 2010
        - fix loader version check

0.46  Wed Dec  8 13:35:28 UTC 2010
        - make use_moose detection more robust

0.45  Wed Dec  8 12:05:58 UTC 2010
        - fix bug where non-result files were picked up for Moose check

0.44  Tue Dec  7 03:50:48 UTC 2010
        - do not upgrade non-Moose schemas to use_moose=1 (RT#60558)
        - added col_collision_map => 'column_%s' as default loader option
          (will take effect on release of loader 0.07003)

0.43  Sun Jul 25 01:00:34 UTC 2010
        - add dep for MooseX::NonMoose for the use_moose=1 option

0.42  Sat Jul 24 23:14:27 UTC 2010
        - add use_moose=1 to loader options by default for create=static

0.41  Wed Apr 28 08:42:13 EDT 2010
        - allow configuring ResultSets using the SchemaProxy trait

0.40  Wed Feb  3 23:12:16 EST 2010
        - fix Replicated trait deps

0.39  Mon Feb  1 10:08:51 EST 2010
        - better 'on_connect_do' parsing in Helper

0.38  Fri Jan 15 06:41:24 EST 2010
        - re-add the 'storage' proxy method

0.37  Thu Jan 14 10:20:43 EST 2010
        - support single replicant hashref from config

0.36  Thu Jan 14 09:21:10 EST 2010
        - upgrading a schema to use_namespaces=1 will also turn on
          components=InflateColumn::DateTime (the default.)

0.35  Sun Dec 27 04:50:53 EST 2009
        - forgot to edit Changes on last upload

0.34  Sun Dec 27 03:49:34 EST 2009
        - move schema proxying into SchemaProxy trait which is off by default

0.33  Sat Dec 26 08:04:49 EST 2009
        - fix test failure in 05testapp.t when env var not set (RT#53101)

0.32  Wed Dec 23 01:22:06 EST 2009
        - Move documentation on setting up authentication into its own section
          for clarity.
        - Other misc documentation enhancements to make the docs more clear
          about the important things to know.